--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -122,6 +122,7 @@
 .au-body a { color: #B20580; text-decoration: underline; text-decoration-skip-ink: auto; }
 
 .au-body a:hover { color: #313131; text-decoration: none; }
+.au-body--alt a:hover { color: #a09f9f; text-decoration: none; }
 
 .au-body a:focus { outline: 3px solid #0C8927; outline-offset: 2px; }
 
